--- a/app/src/main/res/layout/db_event_type_item.xml
+++ b/app/src/main/res/layout/db_event_type_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/db_event_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     style="@style/db_layout_style"
     >
@@ -67,7 +67,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.1"
+      app:layout_constraintGuide_begin="100dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -75,7 +75,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.2"
+      app:layout_constraintGuide_begin="200dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -83,7 +83,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.3"
+      app:layout_constraintGuide_begin="300dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -91,7 +91,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.4"
+      app:layout_constraintGuide_begin="400dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -99,7 +99,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.5"
+      app:layout_constraintGuide_begin="500dp"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
