--- a/app/src/main/res/layout/db_asset_type_item.xml
+++ b/app/src/main/res/layout/db_asset_type_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/db_asset_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     style="@style/db_layout_style"
     >
@@ -112,7 +112,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.1"
+      app:layout_constraintGuide_begin="100dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -120,7 +120,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.2"
+      app:layout_constraintGuide_begin="200dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -128,7 +128,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.3"
+      app:layout_constraintGuide_begin="300dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -136,7 +136,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.4"
+      app:layout_constraintGuide_begin="400dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -144,7 +144,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.5"
+      app:layout_constraintGuide_begin="500dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -152,7 +152,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.6"
+      app:layout_constraintGuide_begin="600dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -160,7 +160,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.7"
+      app:layout_constraintGuide_begin="700dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -168,7 +168,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.8"
+      app:layout_constraintGuide_begin="800dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -176,7 +176,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.85"
+      app:layout_constraintGuide_begin="900dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -184,7 +184,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.9"
+      app:layout_constraintGuide_begin="1000dp"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
