--- a/app/src/main/res/layout/db_type_headline_item.xml
+++ b/app/src/main/res/layout/db_type_headline_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/db_type_headline_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,10 +11,9 @@
   <TextView
       android:id="@+id/db_type_headline"
       style="@style/db_item_style"
-      android:textAlignment="center"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
