--- a/app/src/main/res/layout/db_event_type_item.xml
+++ b/app/src/main/res/layout/db_event_type_item.xml
@@ -58,7 +58,7 @@
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline5"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/guideline6"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
@@ -67,7 +67,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="100dp"
+      app:layout_constraintGuide_begin="50dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -75,7 +75,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="200dp"
+      app:layout_constraintGuide_begin="110dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -91,7 +91,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="400dp"
+      app:layout_constraintGuide_begin="440dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -99,7 +99,15 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="500dp"
+      app:layout_constraintGuide_begin="540dp"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline6"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_begin="790dp"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
