--- a/app/src/main/res/layout/db_group_type_item.xml
+++ b/app/src/main/res/layout/db_group_type_item.xml
@@ -22,7 +22,7 @@
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline2"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
@@ -31,7 +31,15 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="100dp"
+      app:layout_constraintGuide_begin="140dp"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_begin="280dp"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
