--- a/app/src/main/res/layout/db_type_headline_item.xml
+++ b/app/src/main/res/layout/db_type_headline_item.xml
@@ -10,7 +10,8 @@
 
   <TextView
       android:id="@+id/db_type_headline"
-      style="@style/db_item_style"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
