--- a/app/src/main/res/layout/db_type_headline_item.xml
+++ b/app/src/main/res/layout/db_type_headline_item.xml
@@ -12,6 +12,8 @@
       android:id="@+id/db_type_headline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:textStyle="bold"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
