--- a/app/src/main/res/layout/db_dividend_type_item.xml
+++ b/app/src/main/res/layout/db_dividend_type_item.xml
@@ -17,12 +17,26 @@
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
+  <View
+      style="@style/db_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline1"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
   <TextView
       android:id="@+id/db_dividend_symbol"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintEnd_toStartOf="@id/guideline2"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <View
+      style="@style/db_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline2"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
@@ -35,12 +49,26 @@
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
+  <View
+      style="@style/db_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline3"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
   <TextView
       android:id="@+id/db_dividend_cycle"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline3"
       app:layout_constraintEnd_toStartOf="@id/guideline4"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <View
+      style="@style/db_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline4"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
@@ -53,6 +81,13 @@
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
+  <View
+      style="@style/db_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline5"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
   <TextView
       android:id="@+id/db_dividend_type"
       style="@style/db_item_style"
@@ -62,12 +97,26 @@
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
+  <View
+      style="@style/db_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline6"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
   <TextView
       android:id="@+id/db_dividend_exdate"
       style="@style/db_item_style"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline6"
       app:layout_constraintEnd_toStartOf="@id/guideline7"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <View
+      style="@style/db_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline7"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
