--- a/app/src/main/res/layout/summarylist_item.xml
+++ b/app/src/main/res/layout/summarylist_item.xml
@@ -58,6 +58,7 @@
       android:layout_marginEnd="2dp"
       android:textSize="12sp"
       app:layout_constraintTop_toBottomOf="@+id/guideline3"
+      app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="1.0"
       />
