--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -11,16 +11,16 @@
       android:id="@+id/sectionHeaderTextView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="24dp"
-      android:layout_marginBottom="24dp"
       android:layout_marginEnd="16dp"
+      android:layout_marginTop="16dp"
       android:text="System"
       android:textColor="@color/colorAccent"
       android:textStyle="bold"
-      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="@id/guideline1"
+      app:layout_constraintTop_toTopOf="parent"
       />
-
   <Switch
       android:id="@+id/debugswitch"
       android:layout_width="match_parent"
@@ -61,7 +61,8 @@
       android:text="Data base"
       android:textColor="@color/colorAccent"
       android:textStyle="bold"
-      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="@id/guideline1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/divider1"
       />
