--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,6 +5,7 @@
     <item>List</item>
     <item>Tile</item>
     <item>Single line</item>
+    <item>Small tile</item>
     <item>Summary</item>
     <item>News</item>
     <item>Timeline</item>
@@ -14,9 +15,10 @@
     <item>1_StockRoomListFragment</item>
     <item>2_SummaryListFragment</item>
     <item>3_StockRoomDetailListFragment</item>
-    <item>4_SummaryGroupFragment</item>
-    <item>5_AllNewsFragment</item>
-    <item>6_TimelineFragment</item>
+    <item>4_StockRoomSmallListFragment</item>
+    <item>5_SummaryGroupFragment</item>
+    <item>6_AllNewsFragment</item>
+    <item>7_TimelineFragment</item>
   </string-array>
   <string-array name="displayed_views_entries_defaults">
     <item>0_StockRoomChartFragment</item>
