--- a/app/src/main/res/layout/stockroomdetaillist_item.xml
+++ b/app/src/main/res/layout/stockroomdetaillist_item.xml
@@ -45,7 +45,7 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="0dp"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline2"
       app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -66,7 +66,7 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/detaillist_textViewMarketPriceLayout"
       android:layout_width="0dp"
-      android:layout_height="0dp"
+      android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline3"
       app:layout_constraintEnd_toEndOf="parent"
