--- a/app/src/main/res/layout/stockroomsmalllist_item.xml
+++ b/app/src/main/res/layout/stockroomsmalllist_item.xml
@@ -25,7 +25,7 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="0dp"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -46,7 +46,7 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/smalllist_textViewMarketPriceLayout"
       android:layout_width="0dp"
-      android:layout_height="0dp"
+      android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline2"
       app:layout_constraintEnd_toEndOf="parent"
